--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react": "^16.2.0",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "style-loader": "0.19.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
