--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "class-autobind": "^0.1.4",
     "classnames": "^2.2.5",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
@@ -39,6 +40,7 @@
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "style-loader": "0.19.0",
     "stylus": "^0.54.5",
